k8s/7/second/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
      what: frontend
  template:
    metadata:
      name: hello-web
      labels:
        app: hello
        what: frontend
    spec:
      containers:
      - name: web
        image: pn2d/hello-web:v4-web
        livenessProbe:
          exec:
            command:
              - uwping
              - uwsgi://localhost:9090/alive
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - uwping
              - uwsgi://localhost:9090/ready
          initialDelaySeconds: 20
          periodSeconds: 10
      - name: proxy
        image: pn2d/hello-web:v3-proxy
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /alive
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
